# compiler-visualiser

./: .gitignore  README.md  compiler-visualiser-design.md  compiler-visualizer-design.md
docs/: index.html
docs/assets/: engine_bg-qsRoyhru.wasm  index-1tEuQN4w.css  index-Qf9fzGoC.js
engine/: Cargo.toml
engine/src/: assembler.rs  ast.rs  codegen.rs  cpu.rs  ir.rs  lexer.rs  lib.rs  parser.rs  span.rs  vm.rs  wasm.rs
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  engine-api.ts  examples.ts  highlight.ts  main.tsx  styles.css  types.ts
web/src/components/: AsmPanel.tsx  AstPanel.tsx  Controls.tsx  CpuPanel.tsx  SourcePanel.tsx
