[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "s"
lto = true

# wasm-opt would need a binaryen download this network's proxy blocks;
# the module is small enough (~130 KB) that rustc's own opts suffice.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
